# PokeFetch

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: install-unix.sh  install-windows.ps1
src/: __init__.py  cli.py  default_config.json
src/themes/: compact-side.json  dracula-side.json  large-side.json  matrix-side.json  ocean-side.json  pastel-side.json  side-nerd.json  side-unicode.json  stacked-minimal.json  stacked-nerd.json  sunset-side.json
